# elma-classic

./: ABC8.CPP  ABC8.H  ABC_MAKE.CPP  ADATOK.CPP  ADATOK.H  ALL.H  ANIM.CPP  ANIM.H  BEALLIT.CPP  BEALLIT.H  BEALLITO.CPP  BENCH.CPP  BESTTIME.CPP  BESTTIME.H  CRCCHECK.CPP  CUSTOM.CPP  CUSTOM.H  DIALOG.CPP  DIALOG.H  DIALOG32.CPP  DIALOG32.H  DIGIT.CPP  DIGIT.H  DISPLAY.CPP  DOBOZ.CPP  D_DD.CPP  D_K.CPP  D_PIC.CPP  D_STOPER.CPP  D_V.CPP  ECSET.CPP  ECSET.H  EDITHELP.CPP  EDITHELP.H  EDITMENU.H  EDITPLAY.CPP  EDITTOLT.CPP  EDITTOLT.H  EDITTOOL.CPP  EDITTOOL.H  (+97 more)
F_WIN/: MAINPROB.CPP  M_SOUND.H  TOROL.CPP  W_ALL.H  W_DD.CPP  W_DD_DUM.CPP  W_DI.CPP  W_HHIGH.CPP  W_K.CPP  W_NEMPUB.H  W_SOUND.CPP  W_SOUND2.CPP  W_V.CPP  W_V_TOR.CPP
docs/: BUILDING.md
