project('elma', 'cpp', version: '1.0.14', default_options: ['cpp_std=c++20'])

elma_sources = files(
    'ABC8.CPP',
    'ADATOK.CPP',
    'ANIM.CPP',
    'BEALLIT.CPP',
    'BESTTIME.CPP',
    'CUSTOM.CPP',
    'DIALOG.CPP',
    'DIALOG32.CPP',
    'DIGIT.CPP',
    'DISPLAY.CPP',
    'DOBOZ.CPP',
    'D_PIC.CPP',
    'ECSET.CPP',
    'EDITHELP.CPP',
    'EDITMENU.CPP',
    'EDITPLAY.CPP',
    'EDITTOLT.CPP',
    'EDITTOOL.CPP',
    'EDITUJ.CPP',
    'ED_CHECK.CPP',
    'FOGOCSKA.CPP',
    'GOLYKISZ.CPP',
    'GOLYOK.CPP',
    'GOLYUTK.CPP',
    'GYURU.CPP',
    'H_DUMMY.CPP',
    'JATEKOS.CPP',
    'KIRAJ320.CPP',
    'KISKEP.CPP',
    'KOVETO.CPP',
    'KOZOS.CPP',
    'LEJATSZO.CPP',
    'LEPTET.CPP',
    'LGRFILE.CPP',
    'LOAD.CPP',
    'MAIN.CPP',
    'MAINMENU.CPP',
    'MENUKEP.CPP',
    'OPTIONS.CPP',
    'PEXTMENU.CPP',
    'PIC8.CPP',
    'PICLIST.CPP',
    'PLAY.CPP',
    'QOPEN.CPP',
    'README.CPP',
    'RECORDER.CPP',
    'SKIP.CPP',
    'SPRITE.CPP',
    'STATE.CPP',
    'SZAKASZ.CPP',
    'TELJES.CPP',
    'TOPOL.CPP',
    'UTKOZES.CPP',
    'UTKOZES2.CPP',
    'VALASZT2.CPP',
    'VEKT2.CPP',
    'stub.cpp',
)

elma = executable(
    'elma',
    elma_sources,
    cpp_args: [
        '-Wno-writable-strings',
        '-Wno-deprecated-declarations',
        '-Wno-nonportable-include-path',
    ],
)
